Fix break in mobile view

--- a/styles/center_logo.css
+++ b/styles/center_logo.css
@@ -139,7 +139,7 @@
   .topnav_section .nav_section.first ul,
   .topnav_section .nav_section.third ul {
     float: none;
-    margin: 0;
+    margin: 0 !important;
     text-align: left;
   }
   .topnav_section .nav_section.first ul li,
